assets/css/style.css
/*=========== general ========*/

body {
    background-image: url("../images/philly.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-color: rgba(124, 147, 174, 1);
    color: white;
}

h2{
	font-size: 40px;
	font-weight: 100;
	padding-bottom: 20px;
}

.content {
    height: auto;
    font-size: 18px;
    font-weight: 100;
    color: white;
    width: 100%;
    overflow-x: hidden;
    padding: 16% 0;
}

/*.push{
	padding: 25% 0%;
}*/

a{
	text-decoration: none;
	color: inherit;
}


/*=========== header  &&  home ========*/



.sm-icons {
    height: 40px;
    margin-left: 10px;
}

#initials {

	font-size: 50px;
	font-weight: 100;
	padding: 0px;
	margin: 0px;

}

#menu {
    height: 80px;
    width: 100%;
    background-color: rgba(177, 177, 177, 1.00);
    position: fixed;
    border-bottom: 4px solid rgba(241, 149, 108, 1);
    vertical-align: center;
   /* padding: 0px;
	margin: 0px;*/
    z-index: 15;
}
#nav-row{
	margin-top: 1%;
	padding: 0%;
}

#nav-buttons{
	padding-top: 10px;
}


#home{
	padding: 25% 0%;
}

.nav-link{
	height: 10%;
	position: relative;
	color: white;
	font-size: 20px;
	font-weight: 100;
	padding: 40px 12px 20px 12px;
	border-bottom-left-radius: .3em;
	border-bottom-right-radius: .3em;
	/*height: inherit;*/

}

.nav-link:hover{
	/*position: inherit;*/
	background-color:  rgba(36, 64, 100, 1); 
	color: white;
	text-decoration: none;
	transition:
}


/*=========== bio ========*/

#about-me {
    z-index: 1;
    /*background: rgba(124, 147, 174, .75);*/
    background-color: rgba(63, 60, 74, 0.75);
    width: 100%;
}

#tjk {
    height: 200px;
}


/*=========== projects ========*/

#projects-wrapper {
    /*align-self: center;*/
    align-content: center;
}

.projects {
    width: 320px;
    height: 183px;
    overflow-x: hidden;
    overflow-y: hidden;
    margin: 2%;
    padding: 0px;
    border: .5px solid rgba(36, 64, 100, 0.5);

}
.projects:hover{
	z-index: 50;
	backgrou: rgba(124, 147, 174, .75);
}
.trans{
	/*transition: 0.5s;*/
    color: rgba(124, 147, 174, .75);
}
#works {
    z-index: 1;
    background-color: rgba(36, 64, 100, 0.75);
    width: 100%;

}
.img-banner {
    position: relative;
    bottom: 45px;
    background-color: rgba(124, 147, 174, 1);
    color: white;
    padding: 10px 0px;
    text-align: center;
    width: 320px;

}

.img-banner:hover{
    background-color: rgba(124, 147, 174, .75);
    
}

/*===========contact  &&  footer========*/

#contact {
    background-color: rgba(63, 60, 74, 0.75);
    width: 100%;
    padding-top: 16%;
    /*height: 16%;*/
}

.contact-form{
    background-color: rgba(35, 45, 63, 0.75);
    width: 250px;
    height: 50px;
}
#message{
    width: 400px;
    height: 150px;
    font-size: 14px;
}

.push {
    position: relative;
    height: 100px;
}

#tim-contact{
    font-size: 25px;
    margin-bottom: 10px
}

#footer {
    height: 120px;
    background-color: rgba(35, 45, 63, 0.75);
    border-top: 3px solid rgba(241, 149, 108, 1.00);
}

